# hometube

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  AGENTS.md  Cargo.toml  README.md  Tiltfile  renovate.json
.husky/: pre-commit
docker/: Dockerfile  docker-compose.truenas.yml  docker-compose.yml
docs/: deployment.md  google-cloud-setup.md
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: .lintstagedrc.json  oxlint.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
migrations/: 001_initial_schema.sql  002_local_child_accounts.sql  003_remove_sync_columns.sql  004_format_box_ranges.sql  005_remove_oauth.sql  006_segment_cache_total_bytes.sql  007_cache_evictions.sql  008_hidden_videos.sql  009_feed_source_cache.sql  010_feed_source_fallback.sql  011_chromecast_enabled.sql  012_default_downloads_off.sql  013_drop_video_bookmarks.sql  013_purge_unparsed_sidecar_feed_items.sql  013_watch_history_channel_id.sql  014_video_likes_channel_metadata.sql  014_watch_history_channel_id.sql  015_purge_unparsed_sidecar_feed_items.sql  016_remove_usage_limits.sql  017_drop_playlists.sql  019_video_likes_duration.sql  020_channel_archive_sync.sql  021_channel_backfill_notification.sql  022_thumbnail_cache.sql  023_backfill_compact_relative_published_at.sql  024_videos_table.sql  025_channels_table.sql  026_cron_jobs_derived.sql  027_video_published_at_view.sql
plans/: 1778451852595-cosmic-panda.md  1778483706981-followup-gaps.md  1779554340536-channel-archive-sync.md
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
templates/: base-child.html  base-parent.html  base.html
tests/: access.rs  allowlist.rs  allowlist_extended.rs  auth_extended.rs  auth_routes.rs  cache.rs  cache_cleanup.rs  channel_backfill_ytdlp_shim.rs  channels.rs  child_apis.rs  child_only.rs  cron.rs  cron_extended.rs  downloads.rs  downloads_extended.rs  family_playlists.rs  family_playlists_extended.rs  feed_extended.rs  feed_refresher.rs  health.rs  hidden.rs  pages.rs  (+25 more)
(+219 files in other folders)
