[package]
name = "hometube"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A self-hosted YouTube frontend for kids with parent-controlled allowlists."
repository = "https://github.com/jimsimon/hometube"
readme = "README.md"

[dependencies]
# Core Web Framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }
tower-cookies = { version = "0.11", features = ["signed"] }

# Templates
askama = "0.16"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Authentication
oauth2 = "5"
openidconnect = "4"

# HTTP Client (YouTube API + video stream proxying)
reqwest = { version = "0.13", features = ["stream", "json", "query"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Scheduling
tokio-cron-scheduler = "0.15"

# Crypto / Security
argon2 = "0.5"
hmac = "0.13"
sha2 = "0.11"
rand = "0.10"
base64 = "0.22"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Date / Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["io"] }
cron = "0.16"

[features]
# `test-login` exposes a small set of unauthenticated HTTP routes that
# seed the database with deterministic accounts and mint session
# cookies. Used exclusively by the Playwright E2E suite — production
# builds MUST NOT enable this feature.
test-login = []

[dev-dependencies]
axum-test = "20"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
